# Dedux

./: CMakeLists.txt
include/: fileHandler.hpp  idGenerator.hpp  parser.hpp  project.hpp  projectHandler.hpp
projects/: example.txt  testproject.txt
src/: dedux.cpp  fileHandler.cpp  project.cpp  projectHandler.cpp
